// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkflowEditorConfigureInputs matches snapshot with default configuration 1`] = `
<div
  class="ant-layout flex-col p-4 w-[40%] h-full bg-transparent overflow-auto flex-shrink-0 flex-grow-0 css-dev-only-do-not-override-l9pxc0"
>
  <div
    class="ant-layout bg-transparent w-full flex-shrink-0 mb-6 css-dev-only-do-not-override-l9pxc0"
  >
    <h4
      class="ant-typography mb-4 text-sm font-semibold css-dev-only-do-not-override-l9pxc0"
    >
      Agents & Managers
    </h4>
    <div
      class="ant-card ant-card-bordered css-dev-only-do-not-override-l9pxc0"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <span
              class="ant-typography font-semibold text-sm css-dev-only-do-not-override-l9pxc0"
            >
              Generation
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-layout bg-transparent flex-col flex gap-3.5 css-dev-only-do-not-override-l9pxc0"
        >
          <div
            class="ant-layout bg-transparent flex-row justify-between items-center css-dev-only-do-not-override-l9pxc0"
          >
            <div
              class="justify-start items-center flex-grow-0 flex gap-1"
            >
              <span
                class="ant-typography text-sm font-normal css-dev-only-do-not-override-l9pxc0"
              >
                Max New Tokens
              </span>
              <span
                aria-describedby="test-id"
                aria-label="question-circle"
                class="anticon anticon-question-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="question-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-input-number css-dev-only-do-not-override-l9pxc0 ant-input-number-outlined w-20"
            >
              <div
                class="ant-input-number-handler-wrap"
              >
                <span
                  aria-disabled="false"
                  aria-label="Increase Value"
                  class="ant-input-number-handler ant-input-number-handler-up"
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="up"
                    class="anticon anticon-up ant-input-number-handler-up-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="up"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-disabled="false"
                  aria-label="Decrease Value"
                  class="ant-input-number-handler ant-input-number-handler-down"
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-input-number-handler-down-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="ant-input-number-input-wrap"
              >
                <input
                  autocomplete="off"
                  class="ant-input-number-input"
                  role="spinbutton"
                  step="1"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="ant-layout bg-transparent flex-row justify-between items-center css-dev-only-do-not-override-l9pxc0"
          >
            <div
              class="justify-start items-center flex-grow-0 flex gap-1"
            >
              <span
                class="ant-typography text-sm font-normal css-dev-only-do-not-override-l9pxc0"
              >
                Temperature
              </span>
              <span
                aria-describedby="test-id"
                aria-label="question-circle"
                class="anticon anticon-question-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="question-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-slider flex-grow ml-6 css-dev-only-do-not-override-l9pxc0 ant-slider-horizontal"
            >
              <div
                class="ant-slider-rail"
              />
              <div
                class="ant-slider-track"
                style="left: 0%; width: 70%;"
              />
              <div
                class="ant-slider-step"
              />
              <div
                aria-describedby="test-id"
                aria-disabled="false"
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="0"
                aria-valuenow="0.7"
                class="ant-slider-handle"
                role="slider"
                style="left: 70%; transform: translateX(-50%);"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-layout bg-transparent w-full flex-grow flex-col gap-4 css-dev-only-do-not-override-l9pxc0"
  >
    <div
      class="ant-layout bg-transparent w-full flex-grow flex-col gap-4 css-dev-only-do-not-override-l9pxc0"
    >
      <h4
        class="ant-typography mb-4 text-sm font-semibold css-dev-only-do-not-override-l9pxc0"
      >
        Tools and MCPs
      </h4>
      <div
        class="ant-alert ant-alert-info ant-alert-no-icon mb-4 flex-shrink-0 css-dev-only-do-not-override-l9pxc0"
        data-show="true"
        role="alert"
      >
        <div
          class="ant-alert-content"
        >
          <div
            class="ant-alert-message"
          >
            <div
              class="ant-layout flex-col gap-1 p-0 bg-transparent css-dev-only-do-not-override-l9pxc0"
            >
              <div
                class="ant-layout flex-row items-center gap-2 bg-transparent css-dev-only-do-not-override-l9pxc0"
              >
                <span
                  aria-label="info-circle"
                  class="anticon anticon-info-circle text-[#1890ff]"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="info-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                    <path
                      d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="ant-typography text-sm font-semibold bg-transparent css-dev-only-do-not-override-l9pxc0"
                >
                  No Configuration Required
                </span>
              </div>
              <span
                class="ant-typography text-sm font-normal bg-transparent css-dev-only-do-not-override-l9pxc0"
              >
                This workflow has no tools or MCPs that require configuration. You can proceed to test and deploy the workflow.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-layout gap-4 flex-grow css-dev-only-do-not-override-l9pxc0"
      />
    </div>
  </div>
</div>
`;

exports[`WorkflowEditorConfigureInputs matches snapshot with tool configurations 1`] = `
<div
  class="ant-layout flex-col p-4 w-[40%] h-full bg-transparent overflow-auto flex-shrink-0 flex-grow-0 css-dev-only-do-not-override-l9pxc0"
>
  <div
    class="ant-layout bg-transparent w-full flex-shrink-0 mb-6 css-dev-only-do-not-override-l9pxc0"
  >
    <h4
      class="ant-typography mb-4 text-sm font-semibold css-dev-only-do-not-override-l9pxc0"
    >
      Agents & Managers
    </h4>
    <div
      class="ant-card ant-card-bordered css-dev-only-do-not-override-l9pxc0"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <span
              class="ant-typography font-semibold text-sm css-dev-only-do-not-override-l9pxc0"
            >
              Generation
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-layout bg-transparent flex-col flex gap-3.5 css-dev-only-do-not-override-l9pxc0"
        >
          <div
            class="ant-layout bg-transparent flex-row justify-between items-center css-dev-only-do-not-override-l9pxc0"
          >
            <div
              class="justify-start items-center flex-grow-0 flex gap-1"
            >
              <span
                class="ant-typography text-sm font-normal css-dev-only-do-not-override-l9pxc0"
              >
                Max New Tokens
              </span>
              <span
                aria-describedby="test-id"
                aria-label="question-circle"
                class="anticon anticon-question-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="question-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-input-number css-dev-only-do-not-override-l9pxc0 ant-input-number-outlined w-20"
            >
              <div
                class="ant-input-number-handler-wrap"
              >
                <span
                  aria-disabled="false"
                  aria-label="Increase Value"
                  class="ant-input-number-handler ant-input-number-handler-up"
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="up"
                    class="anticon anticon-up ant-input-number-handler-up-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="up"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-disabled="false"
                  aria-label="Decrease Value"
                  class="ant-input-number-handler ant-input-number-handler-down"
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-input-number-handler-down-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="ant-input-number-input-wrap"
              >
                <input
                  autocomplete="off"
                  class="ant-input-number-input"
                  role="spinbutton"
                  step="1"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="ant-layout bg-transparent flex-row justify-between items-center css-dev-only-do-not-override-l9pxc0"
          >
            <div
              class="justify-start items-center flex-grow-0 flex gap-1"
            >
              <span
                class="ant-typography text-sm font-normal css-dev-only-do-not-override-l9pxc0"
              >
                Temperature
              </span>
              <span
                aria-describedby="test-id"
                aria-label="question-circle"
                class="anticon anticon-question-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="question-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-slider flex-grow ml-6 css-dev-only-do-not-override-l9pxc0 ant-slider-horizontal"
            >
              <div
                class="ant-slider-rail"
              />
              <div
                class="ant-slider-track"
                style="left: 0%; width: 70%;"
              />
              <div
                class="ant-slider-step"
              />
              <div
                aria-describedby="test-id"
                aria-disabled="false"
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="0"
                aria-valuenow="0.7"
                class="ant-slider-handle"
                role="slider"
                style="left: 70%; transform: translateX(-50%);"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-layout bg-transparent w-full flex-grow flex-col gap-4 css-dev-only-do-not-override-l9pxc0"
  >
    <div
      class="ant-layout bg-transparent w-full flex-shrink-0 css-dev-only-do-not-override-l9pxc0"
    >
      <div
        data-testid="alert"
      >
        Alert
      </div>
    </div>
  </div>
</div>
`;
